--- a/client/src/ListStudent/Components/MessagePage.css
+++ b/client/src/ListStudent/Components/MessagePage.css
@@ -1,29 +1,93 @@
-.conversation-item {
+.chat-page .conversation-item {
+    display: inline;
+    height: 40px;
+    padding: 10px;
+    color: #6c737a;
     font-size: 18px;
-    /* Tăng kích thước chữ cho tên người dùng và tin nhắn cuối cùng */
-    font-weight: bold;
     color: #2C3E50;
-    /* Màu tối cho tên người dùng */
-    margin-bottom: 8px;
-    /* Khoảng cách dưới giữa các cuộc trò chuyện */
-
 }
 
-.conversation-item p {
-    font-size: 16px;
-    /* Kích thước chữ nhỏ hơn cho tin nhắn cuối cùng */
-    color: #7F8C8D;
-    /* Màu xám cho tin nhắn cuối cùng */
-    margin-left: 50px;
-
-}
-
-/* Thêm khoảng cách và kiểu cho các phần tử trong cuộc trò chuyện */
 .conversation-item strong {
     font-size: 20px;
-    /* Tăng kích thước chữ cho tên người dùng */
-    color: #3498db;
-    /* Màu xanh cho tên người dùng */
+    color: #424445;
     text-transform: capitalize;
-    /* Chữ cái đầu tiên của tên người dùng viết hoa */
+}
+
+.chat-page {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+}
+
+.chat-page .conversation-list{
+    position: absolute;
+    display: inline-block;
+    width: 30%;
+    height: 100%;
+    padding-left: 10px;
+    background-color: #ffffff;
+    border-bottom: 1px solid #302f2f;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.chat-page .texting-box {
+    display: inline;
+    position: fixed;
+    bottom: 0;
+    right: -830px;
+    width: 120%;
+    padding: 10px;
+}
+
+.chat-page .texting-box input {
+    width: 50%;
+    padding: 8px;
+    border: 1px solid #000000;
+    border-radius: 16px;
+}
+
+.chat-page .texting-box button{
+    height: 37px;
+    width: 37px;
+    margin: 4px;
+    border: 1px solid #092547;
+    border-radius: 50%;
+    background-color: #3498db;
+}
+
+.chat-page .messages-container {
+    position: relative;
+   overflow-y: auto;
+   width: 70%;
+   margin-left: auto;
+   padding-bottom: 60px;
+}   
+
+.chat-page .conversation-wrapper{
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    margin-top: -18px;
+    overflow-y: scroll;
+    background-image: linear-gradient(45deg, #666666, #ffffff);
+}
+
+.chat-page .username{
+    display: flex;
+    align-items: center;
+    z-index: 2000;
+    margin: 28px 60px;
+    margin-left: auto;
+}
+
+.chat-page .username p{
+    display: flex;
+    color: #ffffff;
+    font-size: 20px;
+    font-weight: bold;
 }
