--- a/client/src/Booking/Booking.css
+++ b/client/src/Booking/Booking.css
@@ -3,32 +3,18 @@
 
 .modal.fade.show {
     display: block !important;
-    /* Đảm bảo modal hiển thị */
     position: fixed;
-    /* Cố định vị trí */
     top: 40%;
-    /* Căn giữa theo chiều dọc */
     left: 50%;
-    /* Căn giữa theo chiều ngang */
     transform: translate(-50%, -50%);
-    /* Di chuyển để căn giữa hoàn hảo */
     z-index: 1050;
-    /* Đảm bảo modal không bị che khuất */
     opacity: 1;
-    /* Đảm bảo không bị ẩn */
     visibility: visible !important;
-    /* Đảm bảo modal không bị ẩn */
-
-    /* Giới hạn chiều rộng và chiều cao của modal */
     width: auto;
-    /* Để auto chiều rộng theo nội dung */
     max-width: 80%;
-    /* Giới hạn chiều rộng của modal */
     max-height: 80%;
     overflow: hidden;
     padding: 100px;
-
-    /* Thêm khoảng cách xung quanh modal */
     overflow-y: auto;
     height: 100%;
 
@@ -39,7 +25,6 @@
 }
 
 .modal-content {
-
     overflow-y: auto;
 }
 
@@ -56,27 +41,19 @@
 
 .modal-footer button {
     width: 80px;
-    /* Cố định chiều rộng của nút */
     height: 40px;
-    /* Cố định chiều cao của nút */
     padding: 0;
-    /* Đảm bảo không có thêm padding làm phồng nút */
     flex-shrink: 0;
-    /* Ngăn nút co lại hoặc phồng lên */
     display: flex;
     align-items: center;
-    /* Căn giữa nội dung nút */
-    justify-content: center;
-    /* Căn giữa nội dung nút */
+    justify-content: center;    
 }
 
 .form-container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    /* Cột tự động thay đổi */
     gap: 20px;
-    /* Khoảng cách giữa các phần tử */
-
+    margin: 20px
 }
 
 .form-group {
@@ -87,4 +64,48 @@
 .form-control {
     width: 100%;
     padding: 8px;
+}
+
+.header-booking {
+    width: 100%;
+    height: 80px;
+    align-items: center;
+    justify-items: center;
+    padding: 10px;
+    color: #ffffff;
+    background-color: rgb(176, 23, 23);
+    font-size: 2.5rem;
+    font-weight: bold;
+    text-transform: uppercase;
+    letter-spacing: 1.5px;
+}
+
+.header-booking h1 {
+    margin: 0;
+    padding: 0;
+}
+
+.booking-container .booking-button{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 150px;
+    height: 40px;
+    margin: 20px;
+    padding: 10px;
+    border: 1px solid rgb(110, 110, 110);
+    border-radius: 8px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.booking-container .booking-button:hover {
+    width: 158px;
+    height: 48px;
+    font-size: 1.1em;
+}
+
+.booking-container{
+    background-color: antiquewhite;
+    width: 100%;
+    height: 100vh;
 }
