--- a/client/src/ListStudent/Components/Selectbar.css
+++ b/client/src/ListStudent/Components/Selectbar.css
@@ -1,50 +1,33 @@
 .Select-bar-container {
-
-    .search-icon {
-        font-size: 24px;
-        /* Tăng kích thước của icon */
-        padding: 15px;
-        /* Thêm khoảng cách xung quanh icon */
-        cursor: pointer;
-        /* Thêm hiệu ứng chuột khi hover */
-        color: #ff4d4d;
-        /* Dịch icon sang phải */
-        margin-left: 300px;
-
-        i {
-            font-size: 50px;
-            /* Đảm bảo kích thước icon lớn hơn */
-            height: auto;
-        }
-    }
-
-    .message-container {
-        display: flex;
-
-        .message {
-            /* background: red; */
-            width: 50%;
-            margin-left: 250px;
-            font-size: 30px;
-            letter-spacing: 1px;
-            /* Tăng khoảng cách giữa các chữ để đẹp hơn */
-            text-transform: capitalize;
-            color: #2C3E50;
-            margin-top: 30px;
-        }
-
-        .conservation {
-            background: blue;
-            width: 50%;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    display: inline-block;
+    padding: 20px;
+    background-color: rgb(176, 23, 23);
+    justify-content: space-around;
+    z-index: 1000;
+}
 
 
-        }
+.Select-bar-container .search-user{
+    position: relative;
+    max-height: 90vh;
+    width: 27%;
+    z-index: 1000;
+    overflow-y: scroll;
+    background-color: white;
+    top: -24px;
+    left: 40px;
+}
 
-    }
-
-    .history-chat {
-        background: yellow;
-    }
-
-
+.Select-bar-container .search-icon{
+    display: flex;
+    align-items: center;
+    width: 30%;
+    padding: 8px 12px;
+    background-color: white;
+    border-radius: 24px;
+    height: 32px;
 }
