--- a/client/src/Post/Post.css
+++ b/client/src/Post/Post.css
@@ -306,11 +306,12 @@ a svg {
 }
 
 .react-quill-button {
-    background-color: #f0f0f0;
+    background-color: #a5a5a5;
     border: 1px solid #ccc;
-    color: #555;
+    color: #000000;
     font-size: 14px;
     padding: 8px 15px;
+    margin: 50px 20px;
     cursor: pointer;
     border-radius: 4px;
     text-align: center;
